# clap-saw-demo

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml
.github/workflows/: build-pr.yml  cmake.yml
cmake/: .stupisaw.plist.in.swp
src/: clap-saw-demo-editor.cpp  clap-saw-demo-editor.h  clap-saw-demo-pluginentry.cpp  clap-saw-demo.cpp  clap-saw-demo.h  debug-helpers.h  linux-vstgui-adapter.cpp  linux-vstgui-adapter.h  saw-voice.cpp  saw-voice.h  stupieditor.cpp  stupieditor.h  stupisaw.cpp  stupisaw.h  stupisaw_macgui.mm  stupisaw_main.cpp  stupisaw_pluginentry.cpp  stupivoice.cpp  stupivoice.h
